tests/tooling/fixtures/native/execution/positive/switch_case_identifier_const_false_fallthrough_return.objc3
module SwitchCaseIdentifierConstFalseFallthroughReturn;

fn main() -> i32 {
  let value = 1;
  let flag = 0;
  switch (value) {
    case 1:
      while (flag) {
        return 9;
      }
    case 2:
      return 42;
    default:
      return 7;
  }
}
