tests/tooling/fixtures/native/execution/negative/switch_case_while_true_break_conservative_reject.objc3
module SwitchCaseWhileTrueBreakConservativeReject;

fn main() -> i32 {
  let value = 1;
  switch (value) {
    case 1:
      while (true) {
        break;
      }
    case 2:
      return 42;
    default:
      return 9;
  }
}
